# Head

# 0.3.10 - 2015 January 16

- Fix unitialzed constant error

# 0.3.9 - 2015 January 15

- Fix SUBTOTAL to not count other SUBTOTALs
- Tweak the logging of the initial unzip of the excel into xml to be quieter
- Altered the output of the default logger to be less noisy

# 0.3.8 - 2015 January 15

- Tiny wording tweak to the external reference reporting

# 0.3.7 - 2015 January 15

- Reports more detail when it finds an external reference
- Implemented the ISERROR() function

# 0.3.6 - 2014 December 19th

- Fixed a stupid bug causing it always writes the tests in C

# 0.3.5 - 2014 December 18th

- Fixed a bug in the C version of string_join when joining some strings with more than 100 characters
- Generated C file now uses EXCEL_STRING, EXCEL_NUMBER and EXCEL_RANGE macro names instead of more confusing new_excel_string, new_excel_number and new_excel_range
- Now replaces values with constants in named references
- Fixed some memory leaks in the C runtime
- Fixed bug in RIGHT() and LEFT() which would give empty strings when number of characters requested was greater than the size of the string passed
- Can now generate tests in pure C as well as in Ruby using a new --write-tests-in-c option
- If choose to generate tests in pure C, will still produce Ruby version

# 0.3.4 - 2014 December 1st

- Fixed bug when output directory has been set and option set to compile and test C code
- Implemented the NPV function in ruby and C
- Copes when named references contain table references

# 0.3.3 - 2014 October 7th

- Ruby version of FIND function now works when arguments are not strings

# 0.3.2 - 2014 July 28th

- Replaced Nokogiri with Ox

# 0.3.1 - 2014 July 25th

- Fixed so that compiling and testing works even if --no-rakefile is specified

# 0.3.0 - 2014 July 24th

- Shim extension not needed on generated Ruby to C interface code (BREAKING CHANGE), which means that excel_to_c generates a more-or-less drop in replacement for excel_to_ruby 